--- a/TestingNewArch/Base.lproj/Main.storyboard
+++ b/TestingNewArch/Base.lproj/Main.storyboard
@@ -84,7 +84,7 @@
             <objects>
                 <tableViewController id="sMs-Ec-RJE" customClass="AddItemTableViewController" customModule="TestingNewArch" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="ylU-3c-17K">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="602"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
@@ -476,12 +476,96 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ec8-EA-WV1" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="lPq-Tm-UCV" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1188" y="947"/>
+            <point key="canvasLocation" x="1188" y="869"/>
         </scene>
-        <!--Settings Table View Controller-->
+        <!--Today-->
+        <scene sceneID="jYe-ag-eh4">
+            <objects>
+                <viewController title="Today" id="Vc6-h7-y7p" customClass="TodayViewController" customModule="TestingNewArch" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BWv-26-g1i">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="672"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fio-jF-9nW">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="672"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="GS9-C3-RFd">
+                                    <rect key="frame" x="0.0" y="98" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContextItem" rowHeight="70" id="jlf-NN-VqD" customClass="ContextItemTableViewCell" customModule="TestingNewArch" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="70"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jlf-NN-VqD" id="0fn-VZ-dSW">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="69.666666666666671"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Srl-Uz-msa">
+                                                    <rect key="frame" x="325" y="15" width="40" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="40" id="5UM-VA-Wya"/>
+                                                        <constraint firstAttribute="height" constant="40" id="QFB-zP-s7q"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Button" image="BlankCircle"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l8i-fA-uAn">
+                                                    <rect key="frame" x="15" y="15.000000000000002" width="42" height="20.666666666666671"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nME-el-i2t">
+                                                    <rect key="frame" x="15" y="39.666666666666664" width="38" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="l8i-fA-uAn" secondAttribute="bottom" constant="34.329999999999998" id="2E1-ft-C7g"/>
+                                                <constraint firstItem="nME-el-i2t" firstAttribute="top" secondItem="l8i-fA-uAn" secondAttribute="bottom" constant="4" id="6zJ-SO-ua3"/>
+                                                <constraint firstItem="nME-el-i2t" firstAttribute="leading" secondItem="0fn-VZ-dSW" secondAttribute="leadingMargin" id="F0R-OL-12d"/>
+                                                <constraint firstItem="Srl-Uz-msa" firstAttribute="centerY" secondItem="0fn-VZ-dSW" secondAttribute="centerY" id="JQu-Vb-tpQ"/>
+                                                <constraint firstItem="Srl-Uz-msa" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="l8i-fA-uAn" secondAttribute="trailing" constant="4" id="Ji2-M8-LCx"/>
+                                                <constraint firstItem="l8i-fA-uAn" firstAttribute="leading" secondItem="0fn-VZ-dSW" secondAttribute="leadingMargin" id="P5j-ia-rd3"/>
+                                                <constraint firstItem="Srl-Uz-msa" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="nME-el-i2t" secondAttribute="trailing" constant="4" id="UZl-RK-o9e"/>
+                                                <constraint firstItem="l8i-fA-uAn" firstAttribute="top" secondItem="0fn-VZ-dSW" secondAttribute="topMargin" constant="4" id="aDj-A3-7o9"/>
+                                                <constraint firstAttribute="trailing" secondItem="Srl-Uz-msa" secondAttribute="trailing" constant="10" id="jJJ-Vc-X3m"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="checkMarkButton" destination="Srl-Uz-msa" id="MVr-yA-RBT"/>
+                                            <outlet property="dueDateLabel" destination="nME-el-i2t" id="xQ0-M8-gNl"/>
+                                            <outlet property="toDoItemLabel" destination="l8i-fA-uAn" id="hok-yR-iGM"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="fio-jF-9nW" firstAttribute="leading" secondItem="Dfr-RE-ZwT" secondAttribute="leading" id="33R-gd-07G"/>
+                            <constraint firstItem="Dfr-RE-ZwT" firstAttribute="trailing" secondItem="fio-jF-9nW" secondAttribute="trailing" id="VXk-KJ-tuA"/>
+                            <constraint firstItem="fio-jF-9nW" firstAttribute="top" secondItem="Dfr-RE-ZwT" secondAttribute="top" id="j8e-5f-P0N"/>
+                            <constraint firstAttribute="bottom" secondItem="fio-jF-9nW" secondAttribute="bottom" id="l5n-5k-sBu"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Dfr-RE-ZwT"/>
+                    </view>
+                    <connections>
+                        <outlet property="footerView" destination="GS9-C3-RFd" id="8mI-RW-l2Z"/>
+                        <outlet property="todayTableView" destination="fio-jF-9nW" id="gd3-a2-xD6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sPj-Uu-YJv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-822" y="-525"/>
+        </scene>
+        <!--Settings-->
         <scene sceneID="jup-kh-FqA">
             <objects>
-                <tableViewController id="SzZ-0T-GOd" customClass="SettingsTableViewController" customModule="TestingNewArch" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Settings" id="SzZ-0T-GOd" customClass="SettingsTableViewController" customModule="TestingNewArch" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="yCV-v8-RYC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="672"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1271,6 +1355,7 @@
                         <outlet property="mainViewTable" destination="R85-NQ-aVP" id="XZQ-8E-BXj"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="AllSegue" id="ITC-0s-1Ae"/>
                         <segue destination="4sI-xO-Mlb" kind="show" identifier="ContextItemSegue" id="TUO-JR-MF6"/>
+                        <segue destination="Vc6-h7-y7p" kind="show" identifier="TodayViewSegue" id="627-4g-mHl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ajV-Ul-UwP" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1386,14 +1471,14 @@
                         <viewControllerLayoutGuide type="bottom" id="O0z-60-SkK"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="FXq-MF-1rc">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="602"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AdJ-Mw-W9k">
-                                <rect key="frame" x="0.0" y="88" width="375" height="480"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="v9i-L8-oXT">
-                                        <rect key="frame" x="8" y="8" width="359" height="464"/>
+                                        <rect key="frame" x="8" y="8" width="359" height="674"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -1449,7 +1534,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f6o-44-tUM" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="d0Q-tr-LdL" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1188" y="1690"/>
+            <point key="canvasLocation" x="1188" y="1648"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="kJc-Nq-xle">
@@ -1474,7 +1559,7 @@
             <objects>
                 <tableViewController id="MkH-eU-mNm" customClass="ContextSearchViewController" customModule="TestingNewArch" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="xfH-nC-zEN">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="602"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <view key="tableFooterView" contentMode="scaleToFill" id="qfZ-yq-3GX">
@@ -1506,7 +1591,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkF-GK-dwq" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="S54-On-wrL" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2154" y="947"/>
+            <point key="canvasLocation" x="2145" y="869"/>
         </scene>
     </scenes>
     <resources>
@@ -1517,6 +1602,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="vCl-xf-e2I"/>
-        <segue reference="I3k-o4-tjP"/>
+        <segue reference="KKT-5n-wQv"/>
     </inferredMetricsTieBreakers>
 </document>
